# cpp-gametechlab-project-w05

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  GEMINI_TODO.md  imgui.ini
Data/Exported/MeshCache/: apple_mid.lod1.meshbin  apple_mid.lod2.meshbin  bitten_apple_mid.lod1.meshbin  bitten_apple_mid.lod2.meshbin
Shaders/: AppleShader.hlsl
include/Core/: App.h  AppTypes.h  PathManager.h  PlatformTime.h
include/Graphics/: DebugLine.h  HUD.h  Renderer.h  RendererTypes.h
include/Math/: Frustum.h  MathTypes.h
include/Scene/: AssetLoader.h  SceneData.h  SceneManager.h  SceneSerializer.h  SceneTypes.h  UniformGrid.h
include/UI/: EditorLayer.h  EditorTypes.h  IEditorPanel.h
include/UI/Panels/: SConsolePanel.h  SControlPanel.h  SPerformanceOverlay.h  SPropertyWindowPanel.h  SSceneFileSystemPanel.h  SSceneManagerPanel.h
src/Core/: App.cpp  PlatformTime.cpp  main.cpp
src/Graphics/: DebugLine.cpp  HUD.cpp  Renderer.cpp
src/Scene/: AssetLoader.cpp  SceneBVH.cpp  SceneManager.cpp  SceneSerializer.cpp  UniformGrid.cpp
src/UI/: EditorLayer.cpp
src/UI/Panels/: SConsolePanel.cpp  SControlPanel.cpp  SPerformanceOverlay.cpp  SPropertyWindowPanel.cpp  SSceneFileSystemPanel.cpp  SSceneManagerPanel.cpp
